--- a/src/components/spinner/Spinner.css
+++ b/src/components/spinner/Spinner.css
@@ -2,3 +2,9 @@
   display: flex;
   justify-content: center;
 }
+
+.header-spinner {
+  display: inline-block;
+  margin-top: auto;
+  margin-bottom: auto;
+}
